Cover the spreadsheet adapter in the integration tests
Drive xlsx through the server the way the other adapters are: a feed
directory activates, a workbook is delivered into in/, and the rows turn
up in H2 with the input archived.

The fixture is a real .xlsx built with POI, so ServerIT gains a byte[]
delivery overload alongside the text one. The record selector is a cell
rectangle rather than a column range, which keeps the header row out of
the records, and the numeric id cells are declared INTEGER so the typed
cell path is exercised end to end.